fnished version of anger counter in 125% size

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     </div>
     <button class="increment-btn-section"
       id="increment-btn" onclick="increment()">Im Angry now!</button>
-    <script src="index.js"></script>
+   <button class="save-btn-section" id="save-btn" onclick="save()">save</button>
+   <p class="save-class" id="save-el"> previouse :</p>
+   <script src="index.js">
+    </script>
 </body>
 </html>
+
+
+
+
+
